initial adjustment to .c- prefix on all content items in item detail templates to distinguish core elements from content elements

--- a/item_detail/images_detail.handlebars
+++ b/item_detail/images_detail.handlebars
@@ -6,13 +6,13 @@
         </span>
     </div>
     <div class="detail__body  detail__body--images">
-        <div class="detail__body__content">
-            <h5 class="detail__title"><a href="{{url}}">{{title}}</a></h5>
-            <div class="detail__desc">
+        <div class="c-detail  detail__body__content">
+            <h5 class="c-detail__title"><a href="{{url}}">{{title}}</a></h5>
+            <div class="c-detail__desc">
                 <p><a href="{{url}}">{{domain url}}</a></p>
-                <div class="detail__filemeta">
+                <div class="c-detail__filemeta">
                     {{width}} &times; {{height}}
-                    <span class="sep  detail__sep"></span>
+                    <span class="sep  c-detail__sep"></span>
                     <a href="{{image}}">DDG.Text.VIEW_FILE</a>
                 </div>
             </div>
