simplify all 'item_detail' templates down to content only, move 'media' components into separate media templates

--- a/detail_pane/detail_pane_landscape.handlebars
+++ b/detail_pane/detail_pane_landscape.handlebars
@@ -1,4 +1,4 @@
-<div class="dsp-lan">
+<div class="dsp dsp-lan">
     <div class="dsp-lan__media  dsp-lan__media--{{meta.id}}  js-detail-media {{meta.elClass.detailMedia}}">
         {{#if media_content}}
             {{{media_content}}}
