--- a/detail_pane/detail_pane_large.handlebars
+++ b/detail_pane/detail_pane_large.handlebars
@@ -1,4 +1,4 @@
-<div class="dsp-lg">
+<div class="dsp  dsp-lg">
     <div class="dsp-lg__media  dsp-lg__media--{{meta.id}}  js-detail-media {{meta.elClass.detailMedia}}">
         {{#if media_content}}
             {{{media_content}}}
