--- a/detail_pane/detail_pane_mobile.handlebars
+++ b/detail_pane/detail_pane_mobile.handlebars
@@ -1,4 +1,4 @@
-<div class="dsp-mob">
+<div class="dsp dsp-mob">
     <div class="dsp-mob__media  dsp-mob__media--{{meta.id}}  js-detail-media {{meta.elClass.detailMedia}}">
         {{#if media_content}}
             {{{media_content}}}
