--- a/item_detail/qa_detail.handlebars
+++ b/item_detail/qa_detail.handlebars
@@ -1,9 +1,5 @@
-<div class="detail__inner">
-    <div class="detail__body  detail__body--qa">
-        <div class="c-detail detail__body__content  detail__body__content--qa">
-            <h4 class="c-detail__title  detail__title--qa"><a href="{{url}}">{{{heading}}}</a></h4>
-            <div class="chomp--scroll">{{{abstract}}}</div>
-            <p class="c-detail__more">{{{moreAt url source}}}</p>
-        </div>
-    </div>
+<div class="c-detail c-detail--qa">
+    <h4 class="c-detail__title  detail__title--qa"><a href="{{url}}">{{{heading}}}</a></h4>
+    <div class="chomp--scroll">{{{abstract}}}</div>
+    <p class="c-detail__more">{{{moreAt url source}}}</p>
 </div>
