--- a/item_detail/base_item_detail.handlebars
+++ b/item_detail/base_item_detail.handlebars
@@ -1,16 +1,7 @@
-<div class="detail__inner">
-    {{#if image}}
-      <div class="detail__media detail__media--{{meta.id}} {{meta.elClass.detailMedia}}">
-        <img class="detail__media__img {{meta.elClass.detailImg}}" src="{{imageProxy image}}" alt="{{imageAlt}}" />
-      </div>
-    {{/if}}
-    <div class="detail__body detail__body--{{meta.id}} {{meta.elClass.detailBody}}">
-      <div class="detail__body__content">
-        {{#if content}}
-            {{{content}}}
-        {{else}}
-            {{{include meta.options.content}}}
-        {{/if}}
-      </div>
-    </div>
+<div class="c-detail">
+{{#if content}}
+    {{{content}}}
+{{else}}
+    {{{include meta.options.content}}}
+{{/if}}
 </div>
