--- a/item_detail/media_item_detail.handlebars
+++ b/item_detail/media_item_detail.handlebars
@@ -1,26 +1,17 @@
-<div class="detail__inner">
-    {{#if image}}
-        <div class="detail__media {{meta.elClass.detailMedia}}">
-            <img class="detail__media__img {{meta.elClass.detailImg}}" src="{{imageProxy image}}" alt="imageAlt" />
-        </div>
-    {{/if}}
-    <div class="detail__body {{meta.elClass.detailBody}}">
-        <div class="c-detail detail__body__content">
-            <h5 class="c-detail__title {{meta.elClass.detailTitle}}">
-                {{title}}
-                {{#if altSubtitle}}<span class="c-detail__title__sub {{meta.elClass.detailAltSubtitle}}">{{{formatSubtitle altSubtitle}}}</span>{{/if}}
-            </h5>
-            {{#if subtitle}}<span class="c-detail__subtitle {{meta.elClass.detailSubtitle}}">{{{formatSubtitle subtitle}}}</span>{{/if}}
-            {{#if description}}
-            <div class="c-detail__desc {{meta.elClass.detailSnippet}}">
-                {{ellipsis description meta.snippetChars fallback=155}}
-            </div>
-            {{/if}}
-            {{#if meta.options.callout}}
-            <div class="c-detail__callout {{meta.elClass.detailFoot}}">
-                {{{include meta.options.callout}}}
-            </div>
-            {{/if}}
-        </div>
+<div class="c-detail">
+    <h5 class="c-detail__title {{meta.elClass.detailTitle}}">
+        {{title}}
+        {{#if altSubtitle}}<span class="c-detail__title__sub {{meta.elClass.detailAltSubtitle}}">{{{formatSubtitle altSubtitle}}}</span>{{/if}}
+    </h5>
+    {{#if subtitle}}<span class="c-detail__subtitle {{meta.elClass.detailSubtitle}}">{{{formatSubtitle subtitle}}}</span>{{/if}}
+    {{#if description}}
+    <div class="c-detail__desc {{meta.elClass.detailSnippet}}">
+        {{ellipsis description meta.snippetChars fallback=155}}
     </div>
+    {{/if}}
+    {{#if meta.options.callout}}
+    <div class="c-detail__callout {{meta.elClass.detailFoot}}">
+        {{{include meta.options.callout}}}
+    </div>
+    {{/if}}
 </div>
