Add option to hide the review text from a Spice.
We have a helper function called {{starsAndReviews}} which actually accepts 4 arguments (the 4th one being the one that controls whether the review text is show or not) but it's not all being used. By passing meta.options.hideReviewText as the 4th argument, we'd be able to control the review text from a Spice / Goodie / whatever uses this template.

--- a/detail/products_detail.handlebars
+++ b/detail/products_detail.handlebars
@@ -15,7 +15,7 @@
                     {{else}}
                       {{subtitle}}
                       {{#if meta.options.rating}}
-                        <span class="c-product__rating {{#if subtitle}}sep--before{{/if}}">{{{starsAndReviews rating reviewCount url}}}</span>
+                        <span class="c-product__rating {{#if subtitle}}sep--before{{/if}}">{{{starsAndReviews rating reviewCount url meta.options.hideReviewText}}}</span>
                       {{/if}}
                       {{#and meta.options.price meta.options.rating price}}
                         <span class="sep  c-product__sep"></span>
