--- a/item_detail/products_item_detail.handlebars
+++ b/item_detail/products_item_detail.handlebars
@@ -23,7 +23,7 @@
             </p>
             {{#if meta.options.rating}}
                 <p class="c-detail__rating">
-                    {{{starsAndReviews rating reviewCount url_review}}}
+                    {{{starsAndReviews rating reviewCount url_review meta.options.hideReviewText}}}
                 </p>
             {{/if}}
             <p class="c-detail__desc  hide--screen-xs">
