Set hideReviewText as false as the default.

--- a/item/products_item.handlebars
+++ b/item/products_item.handlebars
@@ -21,7 +21,7 @@
 	</div>
         {{#if meta.options.rating}}
 		<div class="tile__tx  tile__rating  one-line">
-			{{{starsAndReviews rating reviewCount url_review meta.options.hideReviewText}}}
+			{{{starsAndReviews rating reviewCount url_review true}}}
 		</div>
         {{/if}}
 	</div>
