add detail media width template option

--- a/detail_pane/detail_pane_large.handlebars
+++ b/detail_pane/detail_pane_large.handlebars
@@ -1,5 +1,5 @@
 <div class="dsp  dsp-lg">
-    <div class="dsp-lg__media  dsp-lg__media--{{meta.id}}  js-detail-media {{meta.elClass.detailMedia}}">
+    <div class="dsp-lg__media  dsp-lg__media--{{meta.id}}  js-detail-media {{meta.elClass.detailMedia}}" {{#if detail.width}}style="width:{{detail.width}};"{{/if}}>
         {{#if media_content}}
             {{{media_content}}}
         {{else}}
