fix missing className on media images for simplicty

--- a/detail_pane/detail_pane_mobile.handlebars
+++ b/detail_pane/detail_pane_mobile.handlebars
@@ -4,7 +4,7 @@
             {{{media_content}}}
         {{else}}
             {{#if image}}
-                <img class="dsp-mob__media__img {{meta.elClass.detailImg}}" src="{{imageProxy image}}" alt="{{imageAlt}}" />
+                <img class="dsp__media__img dsp-mob__media__img {{meta.elClass.detailImg}}" src="{{imageProxy image}}" alt="{{imageAlt}}" />
             {{/if}}
         {{/if}}
     </div>
