make overlay in products media template optional

--- a/item_detail/products_item_detail_media.handlebars
+++ b/item_detail/products_item_detail_media.handlebars
@@ -1,5 +1,5 @@
 {{#if img_m}}
-    <div class="dsp__media__overlay  dsp__media__spacer">
+    <div class="{{#if meta.options.detailMediaOverlay}}dsp__media__overlay{{/if}}  dsp__media__spacer">
         <img class="dsp__media__img" src="{{imageProxy img_m}}" />
     </div>
 {{/if}}
