hide product abstract for mobile & landscape views

--- a/item_detail/products_item_detail.handlebars
+++ b/item_detail/products_item_detail.handlebars
@@ -19,7 +19,7 @@
             {{{starsAndReviews rating reviewCount url_review}}}
         </p>
     {{/if}}
-    <p class="c-detail__desc  hide--screen-xs">
+    <p class="c-detail__desc  hide--dsp-mob  hide--dsp-lan">
         {{{abstract}}}
     </p>
     {{#if meta.options.buy}}
