add hide classes to image detail template for mobile

--- a/item_detail/images_detail.handlebars
+++ b/item_detail/images_detail.handlebars
@@ -1,5 +1,5 @@
 <div class="c-detail">
-    <h5 class="c-detail__title"><a href="{{url}}">{{title}}</a></h5>
+    <h5 class="c-detail__title  hide--dsp-mob  hide--dsp-lan"><a href="{{url}}">{{title}}</a></h5>
     <div class="c-detail__desc">
         <p><a href="{{url}}">{{domain url}}</a></p>
         <div class="c-detail__filemeta">
