--- a/item_detail/videos_detail.handlebars
+++ b/item_detail/videos_detail.handlebars
@@ -1,9 +1,10 @@
-<div class="c-detail">
+<div class="c-detail  hide--dsp-lan">
     <h5 class="c-detail__title"><a href='{{url}}' title="{{title}}">{{title}}</a></h5>
     <div class="c-detail__desc">
-        <p class="c-detail__user"><i class="c-detail__icon  c-detail__user__icon">u</i> <a href='{{userURL}}'>{{{username}}}</a></p>
-        <p class="c-detail__count"><i class="c-detail__icon  c-detail__count__icon">i</i> {{{viewCount}}}</p>
-        <p class="c-detail__date"><i class="c-detail__icon  c-detail__date__icon">&uArr;</i> {{{publishedDate}}}</p>
+        <p class="c-detail__user  hide--dsp-mob"><i class="c-detail__icon  c-detail__user__icon">u</i> <a href='{{userURL}}'>{{{username}}}</a></p>
+        <p class="c-detail__count  inline--dsp-mob"><i class="c-detail__icon  c-detail__count__icon  hide--dsp-mob">i</i> {{{viewCount}}}</p>
+        <span class="sep c-detail__sep hide--dsp-lg"></span>
+        <p class="c-detail__date  inline--dsp-mob"><i class="c-detail__icon  c-detail__date__icon  hide--dsp-mob">&uArr;</i> {{{publishedDate}}}</p>
     </div>    
         {{#if musicVideo}}
             <h6 class="c-detail__links--title">DDG.Text.GET_THIS_SONG_ON</h6>
@@ -25,6 +26,6 @@
             </p>
         {{/if}}
         
-        <p class="c-detail__more">{{{moreAt searchURL provider className=" " iconClassName="c-detail__icon" iconUrl=faviconURL}}}</p>
+        <p class="c-detail__more  hide--dsp-mob">{{{moreAt searchURL provider className=" " iconClassName="c-detail__icon" iconUrl=faviconURL}}}</p>
     
 </div>
