adjust where the callout wrapper for buttons in the prodoct templates lives

--- a/item_detail/products_item_detail.handlebars
+++ b/item_detail/products_item_detail.handlebars
@@ -23,6 +23,8 @@
         {{{abstract}}}
     </p>
     {{#if meta.options.buy}}
-        {{{include meta.options.buy}}}
+        <div class="c-detail__callout">
+            {{{include meta.options.buy}}}
+        </div>
     {{/if}}
 </div>
