--- a/core/metabar.handlebars
+++ b/core/metabar.handlebars
@@ -16,6 +16,19 @@
             {{/if}}
 			</div> 
 		{{/if}}
+		{{#if parameters}}
+			<div class="metabar__parameters">
+			{{#each parameters}}
+				<div class="frm__select">
+					<select class="js-metabar-{{id}}">
+					{{#each options}}
+						<option value="{{option}}" {{#if selected}}selected{{/if}}>{{description}}</option>
+					{{/each}}
+					</select>
+				</div>
+			{{/each}}
+		</div>
+		{{/if}}
 		{{#if secondaryText}}
 			<div class="metabar__secondary-text  hide--screen-s">{{{secondaryText}}}{{#if showMoreAt}}<span class="sep"></span>{{/if}}</div>
 		{{/if}}
