full-width amazon button on mobile

--- a/shared/products_amazon_buy.handlebars
+++ b/shared/products_amazon_buy.handlebars
@@ -1,1 +1,1 @@
-<a href="{{url}}" class="btn btn--primary">DDG.Text.MORE_AT Amazon</a>
+<a href="{{url}}" class="btn btn--primary block--mob">DDG.Text.MORE_AT Amazon</a>
