fixed incorrect value property name

--- a/core/metabar.handlebars
+++ b/core/metabar.handlebars
@@ -22,7 +22,7 @@
 				<div class="frm__select">
 					<select data-id="{{id}}" class="js-metabar-{{id}}">
 					{{#each options}}
-						<option value="{{option}}" {{#if selected}}selected{{/if}}>{{description}}</option>
+						<option value="{{value}}" {{#if selected}}selected{{/if}}>{{description}}</option>
 					{{/each}}
 					</select>
 				</div>
