make dsp-lg template look for 'mediaWidth' instead of just 'width'

--- a/detail_pane/detail_pane_large.handlebars
+++ b/detail_pane/detail_pane_large.handlebars
@@ -1,6 +1,6 @@
 <div class="dsp  dsp-lg">
 {{#unless noMedia}}
-    <div class="dsp-lg__media  dsp-lg__media--{{meta.id}}  js-detail-media {{meta.elClass.detailMedia}}" {{#if detail.width}}style="width:{{detail.width}};"{{/if}}>
+    <div class="dsp-lg__media  dsp-lg__media--{{meta.id}}  js-detail-media {{meta.elClass.detailMedia}}" {{#if detail.mediaWidth}}style="width:{{detail.mediaWidth}};"{{/if}}>
         {{#if media_content}}
             {{{media_content}}}
         {{else}}
