add ability to use item-specific elClass on tiles

--- a/item/audio_item.handlebars
+++ b/item/audio_item.handlebars
@@ -1,4 +1,4 @@
-<div class="tile  tile--c--n  tile--audio  tile--no-highlight">
+<div class="tile  tile--c--n  tile--audio  tile--no-highlight {{#if elClass}}{{elClass}}{{else}}{{meta.elClass.tile}}{{/if}}">
     <div class="tile__media">
         {{#if image}}
         <img class="tile__media__img" src="{{imageProxy image}}" />
