--- a/item/base_item.handlebars
+++ b/item/base_item.handlebars
@@ -1,3 +1,3 @@
-<div class="tile  tile--b {{#unless meta.elClass.tile}} tile--c {{else}} {{meta.elClass.tile}} {{/unless}} tile--{{meta.id}}" {{#if url}}data-link="{{url}}"{{/if}}>  
+<div class="tile  tile--b {{#if elClass}}{{elClass}}{{else}}{{#if meta.elClass.tile}}{{meta.elClass.tile}}{{else}}tile--c{{/if}}{{/if}} tile--{{meta.id}}" {{#if url}}data-link="{{url}}"{{/if}}>  
   <div class="tile__body">{{#if meta.options.tile_content}}{{{include meta.options.tile_content}}}{{else}}{{{include meta.options.content}}}{{/if}}</div>
 </div>
