--- a/item/places_item.handlebars
+++ b/item/places_item.handlebars
@@ -1,4 +1,4 @@
-<div class="tile  tile--f  tile--loc">
+<div class="tile  tile--f  tile--loc {{#if elClass}}{{elClass}}{{else}}{{meta.elClass.tile}}{{/if}}">
 	<div class="tile--f__main  tile--loc__main">
         <div class="tile__media">
             {{#if image}}
