--- a/item/base_expanding_item.handlebars
+++ b/item/base_expanding_item.handlebars
@@ -1,4 +1,4 @@
-<div class="tile  tile--e  tile--{{meta.id}}  tile--no-highlight  tile--c--whole  {{meta.elClass.tile}}">
+<div class="tile  tile--e  tile--{{meta.id}}  tile--no-highlight  tile--c--whole  {{#if elClass}}{{elClass}}{{else}}{{meta.elClass.tile}}{{/if}}">
 	{{{include meta.options.content}}}
 	{{#if canExpand}}
 		<span class="tile__expand-icon  ddgsi  {{meta.elClass.tileExpand}}"></span>
