--- a/item/base_flipping_item.handlebars
+++ b/item/base_flipping_item.handlebars
@@ -1,4 +1,4 @@
-<div class="tile  tile--f  tile--{{meta.id}}  {{meta.elClass.tile}}">
+<div class="tile  tile--f  tile--{{meta.id}}  {{#if elClass}}{{elClass}}{{else}}{{meta.elClass.tile}}{{/if}}">
 	<div class="tile--f__main {{meta.elClass.tileFront}}">
 		{{{include meta.options.front_content}}}
 	</div>
