--- a/item/basic_image_item.handlebars
+++ b/item/basic_image_item.handlebars
@@ -1,4 +1,4 @@
-<div class="tile  tile--b--i {{#unless meta.elClass.tile}} tile--c {{else}} {{meta.elClass.tile}} {{/unless}} has-detail  tile--{{meta.id}}  opt--t-xxs" {{#if url}} data-link="{{url}}"{{/if}}>
+<div class="tile  tile--b--i {{#if elClass}}{{elClass}}{{else}}{{#if meta.elClass.tile}}{{meta.elClass.tile}}{{else}}tile--c{{/if}}{{/if}} has-detail  tile--{{meta.id}}  opt--t-xxs" {{#if url}} data-link="{{url}}"{{/if}}>
 	<div class="tile__media {{meta.elClass.tileMedia}}">
 		<img src="{{imageProxy image}}" alt="{{title}}" class="tile__media__img {{meta.elClass.tileMediaImg}}" />
 	</div>
