update mobile template to make 'mobile more' variants easier to comprehend, add 'is-dynamic' class for mobile, add default sizes for products and movies

--- a/detail_pane/detail_pane_large.handlebars
+++ b/detail_pane/detail_pane_large.handlebars
@@ -10,7 +10,7 @@
         {{/if}}
     </div>
 {{/unless}}
-    <div class="dsp-lg__body  dsp-lg__body--{{meta.id}}  {{meta.elClass.detailBody}} {{#if noMedia}}no-media{{/if}}">
+    <div class="dsp-lg__body  js-detail-body  dsp-lg__body--{{meta.id}}  {{meta.elClass.detailBody}} {{#if noMedia}}no-media{{/if}}">
         <div class="dsp-lg__body__content">{{{content}}}</div>
     </div>
 </div>
