--- a/detail_pane/detail_pane_landscape.handlebars
+++ b/detail_pane/detail_pane_landscape.handlebars
@@ -8,7 +8,7 @@
             {{/if}}
         {{/if}}
     </div>
-    <div class="dsp-lan__body  dsp-lan__body--{{meta.id}}  {{meta.elClass.detailBody}}">
+    <div class="dsp-lan__body  js-detail-body  dsp-lan__body--{{meta.id}}  {{meta.elClass.detailBody}}">
         <div class="dsp-lan__body__content">{{{content}}}</div>
     </div>
 </div>
