--- a/item/products_item.handlebars
+++ b/item/products_item.handlebars
@@ -1,6 +1,7 @@
 <div class="tile  tile--pr {{#if elClass}}{{elClass}}{{else}}{{#if meta.elClass.tile}}{{meta.elClass.tile}}{{else}}tile--c{{/if}}{{/if}} has-detail  tile--{{parentId}} {{#if meta.options.rating}} has-rating{{/if}} opt--t-xxs" data-link="{{url}}">
 	<div class="tile__media  tile__media--pr">
 		<img src="" data-src="{{{imageProxy img}}}" alt="{{title}}" class="tile__media__img  js-lazyload" />
+		{{#if is_prime}}<span class="tile--pr__badge  badge  badge--prime"></span>{{/if}}
 	</div>
 	<div class="tile__body  tile__body--pr">
         {{#if url}}
