--- a/detail_pane/detail_pane_mobile.handlebars
+++ b/detail_pane/detail_pane_mobile.handlebars
@@ -8,7 +8,7 @@
             {{/if}}
         {{/if}}
     </div>
-    <div class="dsp-mob__body  js-detail-body  dsp-mob__body--{{meta.id}} {{meta.elClass.detailBody}} {{#if meta.options.mobileDetailBodyHeight}}is-dynamic{{/if}}">
+    <div class="dsp-mob__body  js-detail-body  dsp-mob__body--{{meta.id}} {{meta.elClass.detailBody}} {{#if meta.options.detailMediaShape}}is-dynamic{{/if}}">
         <div class="dsp-mob__body__content">
             {{#and url meta.options.mobileMore}}<a href="{{url}}" class="dsp-mob__more disc {{meta.elClass.mobileMore}}"></a>{{/and}}
             {{{content}}}
