fix missing closing paren + semicolon

--- a/item/news_item.handlebars
+++ b/item/news_item.handlebars
@@ -1,6 +1,6 @@
 <div class="tile  tile--c  tile--news" data-link="{{url}}">
     {{#if fetch_image}}
-        <div class="tile__media" {{#if image}}style="background-image:url({{imageProxy image}}"{{/if}}>
+        <div class="tile__media" {{#if image}}style="background-image:url({{imageProxy image}});"{{/if}}>
             {{^if fetched_image}}<span class="ddgsi ddgsi-more"></span>{{/if}}
         </div>
     {{/if}}
