--- a/item/news_item.handlebars
+++ b/item/news_item.handlebars
@@ -1,7 +1,8 @@
 <div class="tile  tile--c  tile--news" data-link="{{url}}">
     {{#if fetch_image}}
-        <div class="tile__media" {{#if image}}style="background-image:url({{imageProxy image}});"{{/if}}>
-            {{^if fetched_image}}<span class="ddgsi ddgsi-more"></span>{{/if}}
+        <div class="tile__media">
+            <div class="tile__media__plc ddgsi ddgsi-news"></div>
+            {{#if image}}}<div class="tile__media__img" style="background-image:url({{imageProxy image}});"></div>{{/if}}
         </div>
     {{/if}}
 	<div class="tile__body  has-foot">
