--- a/core/filter_dropdown.handlebars
+++ b/core/filter_dropdown.handlebars
@@ -1,7 +1,7 @@
-<div class="frm__select">
-    <select class="js-metabar-{{key}}" {{#if !enabled}}disabled{{/if}}>
+<div class="frm__select metabar__dropdown metabar__dropdown--{{key}}">
+    <select class="js-metabar-{{key}}" {{#if disabled}}disabled{{/if}}>
     {{#each values}}
-        <option value="{{id}}" {{#if selected}}selected{{/if}} {{#if !enabled}}disabled{{/if}}>{{name}}</option>
+        <option value="{{id}}" {{#if selected}}selected{{/if}} {{#if disabled}}disabled{{/if}}>{{name}}</option>
     {{/each}}
     </select>
 </div>
