--- a/item/news_item.handlebars
+++ b/item/news_item.handlebars
@@ -2,7 +2,7 @@
     {{#if fetch_image}}
         <div class="tile__media">
             <div class="tile__media__plc ddgsi ddgsi-news"></div>
-            {{#if image}}}<div class="tile__media__img" style="background-image:url({{imageProxy image}});"></div>{{/if}}
+            {{#if image}}<div class="tile__media__img" style="background-image:url({{imageProxy image}});"></div>{{/if}}
         </div>
     {{/if}}
 	<div class="tile__body  has-foot">
