--- a/item/nlp_item.handlebars
+++ b/item/nlp_item.handlebars
@@ -1,7 +1,7 @@
 <div class="tile  tile--c  tile--qa  has-detail" data-link="{{url}}">
-	<div class="tile__body  has-foot  js-tile-qa-body">
-		<h6 class="tile__title  tile__title--3sm  tile__title--min  js-tile-qa-title">{{{heading}}}</h6>
-		<div class="tile__content  tile__content--qa  js-ellipsis  hide--mob" data-outer-height=".js-tile-qa-body" data-subtract-height-of=".js-tile-qa-title">{{{abstract}}}</div>
+	<div class="tile__body  has-foot">
+		<h6 class="tile__title  tile__title--3sm  tile__title--min">{{{heading}}}</h6>
+		<div class="tile__content  tile__content--qa  js-ellipsis  hide--mob">{{{abstract}}}</div>
 		<div class="tile__foot">
 			{{{moreAt url source className="tile__more-link"}}}
 		</div>
