--- a/core/filter_dropdown.handlebars
+++ b/core/filter_dropdown.handlebars
@@ -1,5 +1,5 @@
 <div class="frm__select metabar__dropdown metabar__dropdown--{{key}}">
-    <select class="js-metabar-{{key}}" {{#if disabled}}disabled{{/if}}>
+    <select class="js-metabar-dropdown--{{key}}" {{#if disabled}}disabled{{/if}}>
     {{#each values}}
         <option value="{{id}}" {{#if selected}}selected{{/if}} {{#if disabled}}disabled{{/if}}>{{name}}</option>
     {{/each}}
