updates to metabar and modal overlay classes

--- a/core/metabar_showing.handlebars
+++ b/core/metabar_showing.handlebars
@@ -1,1 +1,2 @@
 DDG.Text.SHOWING <span class="metabar__count  js-metabar-count">{{count}}</span><span class="js-metabar-itemtype"> {{l itemType}} <span class="js-metabar-for  hide--mob">DDG.Text.FOR</span></span> <span class="metabar__term  hide--mob  js-metabar-term">{{{searchTerm}}}</span>
+{{#if showGeolocation}}<span class="sep"></span>{{#if preciseLocationEnabled}}<span>Using Precise Location</span>{{else}}<span class="js-metabar-geolocation">Use Precise Location</span>{{/if}}{{/if}}
