use wide tile varaint for videos and news

--- a/item/news_item.handlebars
+++ b/item/news_item.handlebars
@@ -1,4 +1,4 @@
-<div class="tile  tile--c  tile--news" data-link="{{url}}">
+<div class="tile  tile--c--w  tile--news" data-link="{{url}}">
     {{#if fetch_image}}
         <div class="tile__media">
             <div class="tile__media__plc ddgsi ddgsi-news"></div>
