--- a/detail_pane/detail_pane_mobile.handlebars
+++ b/detail_pane/detail_pane_mobile.handlebars
@@ -10,6 +10,7 @@
     </div>
     <div class="dsp-mob__body  js-detail-body  dsp-mob__body--{{meta.id}} {{meta.elClass.detailBody}} {{#if meta.options.detailMediaShape}}is-dynamic{{/if}}">
         <div class="dsp-mob__body__content">
+            <span class="dsp-mob__arrow  js-detail-arrow"></span>
             {{{content}}}
         </div>
     </div>
