hide dropdowns if there's no items loaded

--- a/core/metabar.handlebars
+++ b/core/metabar.handlebars
@@ -16,7 +16,7 @@
 			<div class="metabar__primary-text js-metabar-primary {{^if count}}is-loading{{/if}}">{{{showingHTML}}}</div>
 		{{/if}}
         {{#if showDropdowns}}
-            <div class="metabar__dropdowns js-metabar-dropdowns sep--before"></div>
+            <div class="metabar__dropdowns js-metabar-dropdowns sep--before {{^if count}}is-loading{{/if}}"></div>
         {{/if}}
 	</div>
 </div>
