allow products template to include subtitle text

--- a/item_detail/products_item_detail.handlebars
+++ b/item_detail/products_item_detail.handlebars
@@ -12,6 +12,8 @@
         {{/and}}
         {{#if meta.options.subtitle_content}}
             {{{include meta.options.subtitle_content}}}
+        {{else}}
+            {{subtitle}}
         {{/if}}
     </div>
     {{#if meta.options.rating}}
