--- a/item_detail/products_item_detail.handlebars
+++ b/item_detail/products_item_detail.handlebars
@@ -21,7 +21,7 @@
             {{{starsAndReviews rating reviewCount url_review meta.options.hideReviewText}}}
         </div>
     {{/if}}
-    <div class="c-detail__desc {{#if meta.options.hideDescMobile}}hide--mob{{/if} {{#if meta.options.hideDescLandscape}}hide--dsp-lan{{/if}}">
+    <div class="c-detail__desc {{#if meta.options.hideDescMobile}}hide--mob{{/if}} {{#if meta.options.hideDescLandscape}}hide--dsp-lan{{/if}}">
         {{#if meta.options.abstract_content}}
             {{{include meta.options.abstract_content}}}
         {{else}}
