refactor filter dropdown to use popout__list

--- a/core/filter_dropdown.handlebars
+++ b/core/filter_dropdown.handlebars
@@ -3,9 +3,13 @@
     <div class="metabar__dropdown__popout-wrap popout-wrap popout-wrap--bottom">
         <div class="metabar__dropdown__popout popout js-dropdown-popout popout--bottom">
             <div class="popout__body">
-            {{#each values}}
-                <a href="#" data-value="{{id}}" class="metabar__dropdown__item {{#if disabled}}metabar__dropdown__item--disabled{{/if}} {{#if selected}}metabar__dropdown__item--selected{{/if}} js-dropdown-items">{{name}}</a>
-            {{/each}}
+                <ol class="popout__list">
+                {{#each values}}
+                    <li>
+                        <a href="#" data-value="{{id}}" class="popout__list-link metabar__dropdown__item {{#if disabled}}metabar__dropdown__item--disabled{{/if}} {{#if selected}}metabar__dropdown__item--selected{{/if}} js-dropdown-items">{{name}}</a>
+                    </li>
+                {{/each}}
+                </ol>
             </div>
         </div>
     </div>
