remove need for custom classname in filter dropdown

--- a/core/filter_dropdown.handlebars
+++ b/core/filter_dropdown.handlebars
@@ -1,7 +1,7 @@
 <div class="metabar__dropdown {{#if disabled}}metabar__dropdown--disabled{{/if}} metabar__dropdown--{{key}}">
     <a href="#" class="metabar__dropdown__selected js-dropdown-selected">{{values.0.name}}</a>
     <div class="metabar__dropdown__modal modal modal--popout modal--popout--bottom js-dropdown-popout">
-        <div class="metabar__dropdown__box modal__box">
+        <div class="modal__box">
             <div class="modal__body">
                 <ol class="modal__list">
                 {{#each values}}
