removed dropdown separator

--- a/core/metabar.handlebars
+++ b/core/metabar.handlebars
@@ -16,7 +16,7 @@
 			<div class="metabar__primary-text js-metabar-primary {{^if count}}is-loading{{/if}}"><span class="metabar__item-type">{{l itemType}}</span> DDG.Text.FOR <span class="metabar__term">{{searchTerm}}</span></div>
 		{{/if}}
         {{#if showDropdowns}}
-            <div class="metabar__dropdowns js-metabar-dropdowns sep--before {{^if count}}is-loading{{/if}}"></div>
+            <div class="metabar__dropdowns js-metabar-dropdowns {{^if count}}is-loading{{/if}}"></div>
         {{/if}}
 	</div>
 </div>
