render loading gif as img

--- a/item/tiles_load_more.handlebars
+++ b/item/tiles_load_more.handlebars
@@ -4,5 +4,5 @@
         <span class="tile--m__subtitle">DDG.Text.MORE</span>
     </div>
 	<span class="tile--m--mob">DDG.Text.SHOW_MORE</span>
-	<span class="tile--m__loading"></span>
+	<img class="tile--m__loading" src="{{img}}" />
 </div>
