added hiding classes on primaryText

--- a/core/metabar.handlebars
+++ b/core/metabar.handlebars
@@ -10,11 +10,13 @@
 			<div class="metabar__secondary-text  hide--screen-s">{{{secondaryText}}}{{#if showMoreAt}}<span class="sep"></span>{{/if}}</div>
 		{{/if}}
 		<div class="metabar__attribution  js-attribution  hide--screen-s  is-hidden">{{#if showMoreAt}}<span class="metabar__attribution__sep sep"></span>{{else}}{{#if secondaryText}}<span class="metabar__attribution__sep sep"></span>{{/if}}{{/if}}</div>
-		{{#if primaryText}}
-			<div class="metabar__primary-text">{{{primaryText}}}</div>
-		{{else}}
-			<div class="metabar__primary-text js-metabar-primary {{^if count}}is-loading{{/if}}"><span class="metabar__item-type">{{l itemType}}</span> DDG.Text.FOR <span class="metabar__term">{{searchTerm}}</span></div>
-		{{/if}}
+        <div class="metabar__primary-text js-metabar-primary {{^if count}}is-loading{{/if}}">
+            {{#if primaryText}}
+                {{{primaryText}}}
+            {{else}}
+                <span class="metabar__item-type">{{l itemType}}</span> DDG.Text.FOR <span class="metabar__term">{{searchTerm}}</span>
+            {{/if}}
+        </div>
         {{#if showDropdowns}}
             <div class="metabar__dropdowns js-metabar-dropdowns {{^if count}}is-loading{{/if}}"></div>
         {{/if}}
