extra class on phone

--- a/detail/places_detail.handlebars
+++ b/detail/places_detail.handlebars
@@ -61,7 +61,7 @@
                 {{/if}}
                 <div class="tile__phone-directions">
                 {{#if phone}}
-                    <a class="tile__phone" href="tel:{{phone}}">{{phone}}</a>
+                    <a class="tile__phone btn" href="tel:{{phone}}">{{phone}}</a>
                 {{/if}}
                 {{#if address}}
                     <div class="tile__directions">
