limit how often the directions button shows on popups

--- a/core/maps_marker_popup.handlebars
+++ b/core/maps_marker_popup.handlebars
@@ -1,7 +1,7 @@
 {{#if meta.sourceName}}
     <a class="mapview-marker__popup" href="{{url}}" title="DDG.Text.MORE_AT {{meta.sourceName}}">{{ellipsis name 31}} <span class="mapview-marker__arrow">▶</span></a>
 {{else}}
-    <span class="mapview-marker__popup">
+    <span class="mapview-marker__popup {{#if showDirections}}has-directions{{/if}}">
         {{#if name}}
             <span class="mapview-marker__popup__name">{{name}}</span>
         {{/if}}
@@ -11,7 +11,7 @@
         {{#if displayLatLon}}
             <span class="mapview-marker__popup__latlon">{{{displayLatLon}}}</span>
         {{/if}}
-        {{#if address}}
+        {{#if showDirections}}
             <div class="mapview-marker__popup__directions">
                 <a href="{{directions}}" class="mapview-marker__popup__directions__link js-directions-link">D</a>
                 <select class="mapview-marker__popup__directions__dropdown js-directions-dropdown">
