--- a/core/maps_marker_popup.handlebars
+++ b/core/maps_marker_popup.handlebars
@@ -12,13 +12,8 @@
             <span class="mapview-marker__popup__latlon">{{{displayLatLon}}}</span>
         {{/if}}
         {{#if showDirections}}
-            <div class="mapview-marker__popup__directions">
+            <div class="mapview-marker__popup__directions js-directions-container">
                 <a href="{{directions}}" class="mapview-marker__popup__directions__link js-directions-link">D</a>
-                <select class="mapview-marker__popup__directions__dropdown js-directions-dropdown">
-                {{#each directionSources}}
-                    <option value="{{url}}">{{name}}</option>
-                {{/each}}
-                </select>
             </div>
         {{/if}}
     </span>
