directions dropdown on multi tile view

--- a/detail/places_detail.handlebars
+++ b/detail/places_detail.handlebars
@@ -63,7 +63,7 @@
                 {{#if phone}}
                     <a class="tile__phone btn" href="tel:{{phone}}">{{phone}}</a>
                 {{/if}}
-                {{#if address}}
+                {{#if showDirections}}
                     <div class="tile__directions js-directions-container">
                         <a class="tile__directions__link js-directions-link btn" href="{{directions}}">Directions</a>
                     </div>
