updating detail view

--- a/detail/places_detail.handlebars
+++ b/detail/places_detail.handlebars
@@ -43,15 +43,18 @@
                     {{/if}}
                 </div>
                 {{#if address_lines}}
-                    <a class="tile__sub" href="{{directions}}">
+                    <p class="tile__sub">
                         {{#each address_lines}}
                             {{.}}<br />
                         {{/each}}
-                    </a>
+                    </p>
                 {{else}}
                     {{#if address}}
                         <p class="tile__sub">{{address}}</p>
                     {{/if}}
+                {{/if}}
+                {{#if phone}}
+                    <a class="tile__phone" href="tel:{{phone}}">{{phone}}</a>
                 {{/if}}
                 {{#if hours}}
                     <div class="tile__hours-today">
@@ -59,13 +62,13 @@
                         <span class="tile__hours-today__hours  {{^if hoursToday}}hours-closed{{/if}}">{{#if hoursToday}}{{hoursToday}}{{else}}DDG.Text.CLOSED{{/if}}</span>
                     </div>
                 {{/if}}
-                <div class="tile__phone-directions">
-                {{#if phone}}
-                    <a class="tile__phone btn" href="tel:{{phone}}">{{phone}}</a>
+                <div class="tile__actions">
+                {{#if canMakeCalls}}
+                    <a class="tile__actions__btn tile__call btn" href="tel:{{phone}}">Call</a>
                 {{/if}}
                 {{#if showDirections}}
                     <div class="tile__directions js-directions-container">
-                        <a class="tile__directions__link js-directions-link btn" href="{{directions}}">Directions</a>
+                        <a class="tile__actions__btn btn js-directions-link" href="{{directions}}">Get Directions</a>
                     </div>
                 {{/if}}
                 </div>
